[project]
name = "sea-raft"
version = "0.0.1"
description = """
We introduce SEA-RAFT, a more simple, efficient, and accurate RAFT for optical flow. Compared with RAFT, SEA-RAFT is trained with a new loss (mixture of Laplace). It directly regresses an initial flow for faster convergence in iterative refinements and introduces rigid-motion pre-training to improve generalization. SEA-RAFT achieves state-of-the-art accuracy on the Spring benchmark with a 3.69 endpoint-error (EPE) and a 0.36 1-pixel outlier rate (1px), representing 22.9% and 17.8% error reduction from best-published results. In addition, SEA-RAFT obtains the best cross-dataset generalization on KITTI and Spring. With its high efficiency, SEA-RAFT operates at least 2.3x faster than existing methods while maintaining competitive performance.
"""
authors = [
    {name = "Wang, Yihan"},
    {name = "Lipson, Lahav"},
    {name = "Deng, Jia"}
]
readme = "README.md"
requires-python = ">= 3.10.13"
dependencies= [
    "torch",
    "torchvision",
    "torchaudio",
    "numpy",
    "matplotlib",
    "scipy",
    "opencv-python",
    "tensorboard",
    "h5py",
    "tqdm",
    "einops",
    "huggingface-hub"
]

[project.optional-dependencies]
profiler =[
        "ptlflow"
]
[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []

